@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Move <autosend> to a seperate module
  * No longer depend on specific order of USER and NICK commands
  * Use new CtrlProxy-specific logging system. Logs go 
  to ~/.ctrlproxy/log by default now when in daemon mode.
@@ -80,6 +81,7 @@ Ctrlproxy 2.7:
  * Add gnutls support
  * Fix problems with incorrectly added colons
  * Add %e to log_custom (Korbinian Rosenegger)
+ * And much, much more...
 
 Ctrlproxy 2.6:
  * Configuration utility (Kyoshiro)
